--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.7.95-0ubuntu1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Fri, 23 Dec 2011 23:39:41 +0100
+
 kactivities (4:4.7.90-0ubuntu1) precise; urgency=low
 
   * Initial package
