--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.7.95-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.7.95-0ubuntu1) precise; urgency=low
 
   * New upstream release candidate
     - update libkactivities-dev.install
