--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.7.97-0ubuntu1~ppa1) precise; urgency=low
+
+  * New upstream RC release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 04 Jan 2012 13:14:56 +0000
+
 kactivities (4:4.7.95-0ubuntu1) precise; urgency=low
 
   * New upstream release candidate
