--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.7.97-0ubuntu1~ppa1) precise; urgency=low
+kactivities (4:4.7.97-0ubuntu1) precise; urgency=low
 
   * New upstream RC release
 
