--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.8.0-0ubuntu1~ppa1) precise; urgency=low
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 19 Jan 2012 12:01:22 +0000
+
 kactivities (4:4.7.97-0ubuntu1) precise; urgency=low
 
   * New upstream RC release
