add some more breaks/replaces

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 kactivities (4:4.8.0-0ubuntu2) UNRELEASED; urgency=low
 
-  * Add breaks/replaces for libkactivities-bin against kde-runtime-data
+  * libkactivities-bin breaks/replaces kde-runtime << 4:4.8.0
+  * libkactivities-bin breaks/replaces kde-runtime-data << 4:4.8.0
+  * libkactivities-dbg breaks/replaces kde-runtime-dbg << 4:4.8.0
 
  -- Philip Muškovac <yofel@kubuntu.org>  Mon, 27 Feb 2012 07:59:19 +0100
 
