--- a/debian/changelog
+++ b/debian/changelog
@@ -4,4 +4,7 @@ kactivities (4:4.8.1-0r0) UNRELEASED; urgency=low
   * New upstream release, start from kubuntu packaging, thanks!
   * Bump kdelibs5-dev depends to 4.8.
 
+  [ José Manuel Santamaría Lema ]
+  * Bump kde-sc-dev-latest build dependency to 4:4.8.1.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 08 Mar 2012 21:11:33 +0100
