--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.8.2-0ubuntu1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Fri, 30 Mar 2012 20:00:33 +0200
+
 kactivities (4:4.8.1-0ubuntu1) precise; urgency=low
 
   * New upstream release
