--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kactivities (4:4.8.3-0ubuntu0.1) UNRELEASED; urgency=low
+kactivities (4:4.8.3-0ubuntu1) quantal; urgency=low
 
   * New upstream release
     - add activitymanager_plugin_globalshortcuts to libkactivities-bin.install
 
- -- Philip Muškovac <yofel@kubuntu.org>  Wed, 02 May 2012 15:40:56 +0200
+ -- Philip Muškovac <yofel@kubuntu.org>  Sun, 13 May 2012 19:02:42 +0200
 
 kactivities (4:4.8.2-0ubuntu2) precise-proposed; urgency=low
 
