--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,29 @@
+kactivities (4:4.8.80-0ubuntu1) UNRELEASED; urgency=low
+
+  * Merge with debian git, remaining changes: 
+    - keep symbol file
+  * New upstream beta release
+    TODO
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Mon, 21 May 2012 08:24:10 +0200
+
 kactivities (4:4.8.3-0ubuntu1) quantal; urgency=low
 
   * New upstream release
     - add activitymanager_plugin_globalshortcuts to libkactivities-bin.install
 
  -- Philip Muškovac <yofel@kubuntu.org>  Sun, 13 May 2012 19:02:42 +0200
+
+kactivities (4:4.8.3-0r1) UNRELEASED; urgency=low
+
+  [ Eshat Cakar ]
+  * New upstream release, start from kubuntu packaging, thanks!
+  * Bump kdelibs5-dev depends to 4.8.
+
+  [ José Manuel Santamaría Lema ]
+  * Bump kde-sc-dev-latest build dependency to 4:4.8.3.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 08 Mar 2012 21:11:33 +0100
 
 kactivities (4:4.8.2-0ubuntu2) precise-proposed; urgency=low
 
@@ -51,3 +71,4 @@ kactivities (4:4.7.90-0ubuntu1) precise; urgency=low
   * New upstream beta release
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 13 Dec 2011 11:53:27 +0000
+
