After consulting with Debian, we'll just stuff both frontends in to libkdeclarative-bin since the savings aren't worth the complexity of the split.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,14 +2,8 @@ kactivities (4:4.8.80-0ubuntu1) UNRELEASED; urgency=low
 
   [ Jonathan Thomas ]
   * New upstream beta release:
-    - Update libactivities6.symbols for new symbols
-    - Update libkactivities-bin.install for removed files
-    - Add two new packages, activitymanager-uihandler-kdialog and
-      activity-uihandler-declarative to contain the two frontends for the
-      ActivityManager runtime. Both provide the activitymanager-uihandler
-      virtual package.
-    - Add an optional dependency to libkactivities-bin for either
-      activity-uihandler-kdialog, or the activity-uihandler virtual package.
+    - Update libactivities6.symbols for new symbols.
+    - Update libkactivities-bin.install for changed files.
 
   [ Philip Muškovac ]
   * Merge with debian git, remaining changes: 
