--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kactivities (4:4.8.4-0r0) UNRELEASED; urgency=low
 
   [ José Manuel Santamaría Lema ]
   * Add myself to Uploaders.
+  * Add watch file.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 05 Jun 2012 17:40:28 +0200
 
