--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ kactivities (4:4.8.4-0r1) UNRELEASED; urgency=low
   [ José Manuel Santamaría Lema ]
   * Add myself to Uploaders.
   * Add watch file.
+  
+  [ José Manuel Santamaría Lema ]
+  * Bump kde-sc-dev-latest build dependency to 4:4.8.4.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 05 Jun 2012 17:40:28 +0200
 
