--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.8.90-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.8.90-0ubuntu1) quantal; urgency=low
 
   * New upstream beta release.
 
