--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 kactivities (4:4.9.2-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream bugfix release
+  * New upstream bugfix release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 01 Oct 2012 11:59:54 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 01 Oct 2012 12:20:34 +0100
 
 kactivities (4:4.9.1-0ubuntu1) quantal; urgency=low
 
