--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ kactivities (4:4.9.2-0ubuntu1) UNRELEASED; urgency=low
   * New upstream bugfix release
   * New upstream bugfix release
   * New upstream bugfix release
+  * New upstream bugfix release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 01 Oct 2012 13:46:17 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 01 Oct 2012 14:36:35 +0100
 
 kactivities (4:4.9.1-0ubuntu1) quantal; urgency=low
 
