--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.9.2-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.9.2-0ubuntu1) quantal-proposed; urgency=low
 
   * New upstream bugfix release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 01 Oct 2012 15:06:03 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 02 Oct 2012 15:10:35 +0100
 
 kactivities (4:4.9.1-0ubuntu1) quantal; urgency=low
 
