--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.9.3-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.9.3-0ubuntu1) raring; urgency=low
 
   * New upstream release (LP: #1074747)
 
- -- Philip Muškovac <yofel@kubuntu.org>  Sun, 04 Nov 2012 02:23:23 +0100
+ -- Philip Muškovac <yofel@kubuntu.org>  Tue, 06 Nov 2012 22:22:07 +0100
 
 kactivities (4:4.9.2-0ubuntu1) quantal-proposed; urgency=low
 
