--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ kactivities (4:4.9.3-0r0) UNRELEASED; urgency=low
 
   * New upstream release.
 
+  [ Daniele E. Domenichelli ]
+  * Update build dependencies.
+
  -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sun, 18 Nov 2012 17:55:37 +0100
 
 kactivities (4:4.8.5-0r0) UNRELEASED; urgency=low
