--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,8 @@ kactivities (4:4.9.3-0r0) UNRELEASED; urgency=low
   [ José Manuel Santamaría Lema ]
   * In order to avoid a circular dependency between libkactivities-bin and
     libkactivities6 (this didn't happen in 4.8.x):
-    + libkactivities6.symbols adds a dependency on libkactivities-bin
+    + libkactivities6.symbols adds a dependency on libkactivities-bin (and added
+      a lintian override for symbols-declares-dependency-on-other-package).
     + libkactivities6 recommends libkactivities-bin to avoid possible partial
       upgrades problems.
 
