--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,10 @@ kactivities (4:4.9.3-0r1) UNRELEASED; urgency=low
   * New upstream release.
 
   [ Daniele E. Domenichelli ]
-  * Update build dependencies.
+  * Update build dependencies:
+    + Bump kdelibs5-dev to 4:4.9.
+    + Add libx11-dev.
+    + Add libqt4-opengl-dev.
   * Update installed files.
   * Update symbols.
 
