--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ kactivities (4:4.9.3-0r1) UNRELEASED; urgency=low
   * Update symbols.
 
   [ José Manuel Santamaría Lema ]
+  * Bump kde-sc-dev-latest build dependency to 4:4.9.3.
   * In order to avoid a circular dependency between libkactivities-bin and
     libkactivities6 (this didn't happen in 4.8.x):
     + libkactivities6.symbols adds a dependency on libkactivities-bin (and added
