releasing version 4:4.9.80-0ubuntu1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.9.80-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.9.80-0ubuntu1) raring; urgency=low
 
   [ Jonathan Riddell ]
   * New upstream beta release
