--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.9.90-0ubuntu1) UNRELEASED; urgency=low
+
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Dec 2012 11:13:17 +0000
+
 kactivities (4:4.9.80-0ubuntu2) raring; urgency=low
 
   * Set minimum required version of nepomuk-core-dev to 4:4.9.80
