--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.9.90-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.9.90-0ubuntu1) raring-proposed; urgency=low
 
   * New upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Dec 2012 11:13:17 +0000
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Dec 2012 17:35:52 +0000
 
 kactivities (4:4.9.80-0ubuntu2) raring; urgency=low
 
