--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.9.95-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.9.95-0ubuntu1) raring; urgency=low
 
   * New upstream RC release
 
@@ -88,7 +88,7 @@ kactivities (4:4.8.3-0ubuntu1) quantal; urgency=low
 
  -- Philip Muškovac <yofel@kubuntu.org>  Sun, 13 May 2012 19:02:42 +0200
 
-kactivities (4:4.8.3-0r1) UNRELEASED; urgency=low
+kactivities (4:4.8.3-0r1) raring; urgency=low
 
   [ Eshat Cakar ]
   * New upstream release, start from kubuntu packaging, thanks!
