--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.9.98-0ubuntu1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 17 Jan 2013 09:49:54 +0000
+
 kactivities (4:4.9.97-0ubuntu1) raring; urgency=low
 
   * New upstream release candidate
