--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.10.0-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.10.0-0ubuntu1) raring-proposed; urgency=low
 
   * New upstream release
 
- -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 31 Jan 2013 10:33:54 +0530
+ -- Rohan Garg <rohangarg@kubuntu.org>  Wed, 06 Feb 2013 11:30:49 +0000
 
 kactivities (4:4.9.98-0ubuntu1) raring-proposed; urgency=low
 
