--- a/debian/changelog
+++ b/debian/changelog
@@ -23,7 +23,10 @@ kactivities (4:4.10.0-0r0) UNRELEASED; urgency=low
     + libkactivities6 recommends libkactivities-bin to avoid possible partial
       upgrades problems.
   * Add libkactivities-models1 package.
-  * Use ${allLibraries} variables for libkactivities-dev and libkactivities-dbg depends.
+  * Use ${allLibraries} variables for libkactivities-dev and libkactivities-dbg
+    depends.
+  * Bump build dependency on pkg-kde-tools to 0.15.4~, because previous releases
+    wouldn't filter out libkactivities-dbg from ${allLibraries}.
   * Update installed files.
   * Update symbols files.
 
