--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.10.1-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.10.1-0ubuntu1) raring-proposed; urgency=low
 
   * New upstream bugfix release
 
- -- Philip Muškovac <yofel@kubuntu.org>  Fri, 01 Mar 2013 21:21:52 +0100
+ -- Philip Muškovac <yofel@kubuntu.org>  Tue, 05 Mar 2013 15:12:50 +0000
 
 kactivities (4:4.10.0-0ubuntu1) raring-proposed; urgency=low
 
