--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.10.2-0ubuntu1) UNRELEASED; urgency=low
+
+  * New upstream bugfix release
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Sun, 31 Mar 2013 14:36:12 +0200
+
 kactivities (4:4.10.1-0ubuntu1) raring-proposed; urgency=low
 
   * New upstream bugfix release
