--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.10.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 10 May 2013 17:19:31 +0200
+
 kactivities (4:4.10.2-1) experimental; urgency=low
 
   * New upstream release.
