--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ kactivities (4:4.10.3-1) UNRELEASED; urgency=low
   * New upstream release.
   * Bump debhelper build-dep and compat to 9.
   * Bump Standards-Version to 3.9.4.
+  * Update Uploaders list.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 10 May 2013 17:19:31 +0200
 
