--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.10.4-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 06 Jun 2013 16:54:41 +0200
+
 kactivities (4:4.10.3-1) unstable; urgency=low
 
   * New upstream release.
