--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.10.4-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.10.4-0ubuntu1) saucy-proposed; urgency=low
 
   * New upstream bugfix release
 
- -- Rohan Garg <rohangarg@kubuntu.org>  Sat, 01 Jun 2013 13:33:46 +0100
+ -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 06 Jun 2013 23:35:13 +0100
 
 kactivities (4:4.10.3-0ubuntu1) saucy; urgency=low
 
