--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kactivities (4:4.10.4-1) UNRELEASED; urgency=low
   * Bump debhelper build-dep and compat to 9.
   * Bump Standards-Version to 3.9.4.
   * Update Uploaders list.
+  * Update vcs fields.
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 06 Jun 2013 16:54:41 +0200
 
