--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.10.4-1) UNRELEASED; urgency=low
+kactivities (4:4.10.4-1) experimental; urgency=low
 
   * New upstream release.
   * Bump debhelper build-dep and compat to 9.
@@ -6,7 +6,7 @@ kactivities (4:4.10.4-1) UNRELEASED; urgency=low
   * Update Uploaders list.
   * Update vcs fields.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 06 Jun 2013 16:54:41 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 13 Jun 2013 23:00:03 +0200
 
 kactivities (4:4.10.2-1) experimental; urgency=low
 
