--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 kactivities (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
 
+  [ Rohan Garg ]
   * New upstream release
+
+  [ Howard Chan ]
+  * Fixed the symbols files
 
  -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 13 Jun 2013 09:04:26 +0100
 
