--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ kactivities (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
   * New upstream release
 
   [ Howard Chan ]
-  * Fixed the symbols files
+  * Fix the symbols files
 
  -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 13 Jun 2013 09:04:26 +0100
 
