--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ kactivities (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
   * Fix the symbols files
   * Update libkactivities-bin.install
 
+  [ Philip Muškovac ]
+  * Update install files 
+
  -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 13 Jun 2013 09:04:26 +0100
 
 kactivities (4:4.10.4-0ubuntu1) saucy-proposed; urgency=low
