--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ kactivities (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
 
   [ Philip Muškovac ]
   * Update install files 
+  * Add new symbols to libkactivities6.symbols
 
  -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 13 Jun 2013 09:04:26 +0100
 
