--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,10 @@ kactivities (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
   * Update install files 
   * Add new symbols to libkactivities6.symbols
 
- -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 13 Jun 2013 09:04:26 +0100
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 20 Jun 2013 23:48:24 +0100
 
 kactivities (4:4.10.4-0ubuntu1) saucy-proposed; urgency=low
 
