--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.10.80-0ubuntu1) saucy; urgency=low
 
   [ Rohan Garg ]
   * New upstream release
@@ -14,7 +14,7 @@ kactivities (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
   [ Jonathan Riddell ]
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 20 Jun 2013 23:48:24 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 21 Jun 2013 00:46:20 +0100
 
 kactivities (4:4.10.4-0ubuntu1) saucy-proposed; urgency=low
 
