--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.10.90-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.10.90-0ubuntu1) saucy; urgency=low
 
   * New upstream bet release
 
- -- Michał Zając <quintasan@kubuntu.org>  Thu, 27 Jun 2013 02:28:56 +0200
+ -- Michał Zając <quintasan@kubuntu.org>  Fri, 28 Jun 2013 17:59:05 +0100
 
 kactivities (4:4.10.80-0ubuntu1) saucy; urgency=low
 
