--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 kactivities (4:4.10.97-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream RC 2 release
+  * New upstream RC 2 release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 25 Jul 2013 12:08:09 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 25 Jul 2013 12:36:10 +0100
 
 kactivities (4:4.10.95-0ubuntu1) saucy; urgency=low
 
