--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.11.1-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:29:35 +0200
+
 kactivities (4:4.10.5-1) unstable; urgency=low
 
   * New upstream release.
