--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.11.1-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.11.1-0ubuntu1) saucy; urgency=low
 
   * New upstream bugfix release.
 
- -- Howard Chan <smartboyhw@gmail.com>  Fri, 30 Aug 2013 20:23:05 +0800
+ -- Howard Chan <smartboyhw@gmail.com>  Fri, 06 Sep 2013 22:05:28 +0100
 
 kactivities (4:4.11.0-0ubuntu1) saucy; urgency=low
 
