Update symbols file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kactivities (4:4.11.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Update install files.
+  * Update symbols file.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:29:35 +0200
 
