--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.11.2-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.11.2-0ubuntu1) saucy; urgency=low
 
   * New upstream bugfix release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 27 Sep 2013 14:33:52 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 30 Sep 2013 12:33:27 +0100
 
 kactivities (4:4.11.1-0ubuntu1) saucy; urgency=low
 
