--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.11.1-1) UNRELEASED; urgency=low
+kactivities (4:4.11.2-0r0) UNRELEASED; urgency=low
 
   * New upstream release.
   * Update install files.
