--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-kactivities (4:4.11.2-0r0) UNRELEASED; urgency=low
+kactivities (4:4.11.2-1) experimental; urgency=low
 
   * New upstream release.
   * Update install files.
   * Update symbols file.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:29:35 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 02 Oct 2013 20:32:23 +0200
 
 kactivities (4:4.10.5-1) unstable; urgency=low
 
