--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.11.2-2) UNRELEASED; urgency=low
+
+  * Bump kdelibs5-dev build-dependency version.
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Oct 2013 16:48:19 +0200
+
 kactivities (4:4.11.2-1) experimental; urgency=low
 
   * New upstream release.
