--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.11.2-2) UNRELEASED; urgency=low
+kactivities (4:4.11.2-2) experimental; urgency=low
 
   * Bump kdelibs5-dev build-dependency version.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Oct 2013 16:48:19 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Oct 2013 17:11:50 +0200
 
 kactivities (4:4.11.2-1) experimental; urgency=low
 
