--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kactivities (4:4.11.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Update build dependencies.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 06 Nov 2013 12:23:17 +0100
 
