--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kactivities (4:4.11.3-1) UNRELEASED; urgency=low
+kactivities (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
   * Update build dependencies.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 06 Nov 2013 12:23:17 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 06 Nov 2013 16:33:55 +0100
 
 kactivities (4:4.11.2-2) experimental; urgency=low
 
