--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.11.95-0ubuntu1) UNRELEASED; urgency=low
+kactivities (4:4.11.95-0ubuntu1) trusty; urgency=low
 
   * New upstream beta release
 
- -- Rohan Garg <rohangarg@kubuntu.org>  Sat, 23 Nov 2013 18:39:19 +0100
+ -- Rohan Garg <rohangarg@kubuntu.org>  Mon, 25 Nov 2013 17:43:08 +0100
 
 kactivities (4:4.11.80-0ubuntu1) trusty; urgency=low
 
