--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.11.97-0ubuntu1) UNRELEASED; urgency=low
+
+  * New upstream RC release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 28 Nov 2013 09:43:34 +0000
+
 kactivities (4:4.11.95-0ubuntu1) trusty; urgency=low
 
   * New upstream beta release
