--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.11.4-1) UNRELEASED; urgency=low
+kactivities (4:4.11.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 06 Dec 2013 16:31:57 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 10 Jan 2014 12:42:42 -0300
 
 kactivities (4:4.11.3-1) unstable; urgency=low
 
