--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kactivities (4:4.11.5-1) UNRELEASED; urgency=low
+kactivities (4:4.11.5-1) unstable; urgency=low
 
   * New upstream release.
   * Add autopkgtest.
   * Bump Standards-Version to 3.9.5, no changes needed.
   * Add abi-compliance-checker info.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 10 Jan 2014 12:42:42 -0300
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 15 Jan 2014 21:30:13 -0300
 
 kactivities (4:4.11.3-1) unstable; urgency=low
 
