--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kactivities (4:4.12.2-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Update acc files.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 23:59:57 +0100
 
