--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.12.2-1) UNRELEASED; urgency=medium
+kactivities (4:4.12.2-1~) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Update acc files.
