--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-kactivities (4:4.12.2-1~) UNRELEASED; urgency=medium
+kactivities (4:4.12.2-1) experimental; urgency=medium
 
   * New upstream release.
   * Update acc files.
   * Bump kde-sc-dev-latest build dependency.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 23:59:57 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 10 Feb 2014 11:32:38 +0100
 
 kactivities (4:4.11.5-1) unstable; urgency=low
 
