--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 kactivities-kf5 (4.96.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * Initial package
+
+  [ Scarlett Clark ]
+  * Patch find_package so it would build. 
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 25 Feb 2014 21:34:41 +0000
