--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities-kf5 (4.96.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Jonathan Riddell ]
   * Initial package
@@ -6,4 +6,7 @@ kactivities-kf5 (4.96.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * Patch find_package so it would build. 
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 25 Feb 2014 21:34:41 +0000
+  [ Jonathan Riddell ]
+  * New upstream alpha release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Mar 2014 11:35:13 +0000
