--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream alpha release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Mar 2014 12:13:34 +0000
+
 kactivities-kf5 (4.96.0-0ubuntu1) trusty; urgency=medium
 
   [ Jonathan Riddell ]
