--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kactivities (4:4.12.3-0ubuntu1) trusty; urgency=medium
 
   * New upstream bugfix release
 
- -- Rohan Garg <rohangarg@kubuntu.org>  Fri, 28 Feb 2014 20:18:20 +0100
+ -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 04 Mar 2014 20:28:24 +0100
 
 kactivities (4:4.12.2-0ubuntu1) trusty; urgency=medium
 
