--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.12.80-0ubuntu1) UNRELEASED; urgency=medium
+
+  * new upstream alpha release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Mar 2014 13:48:50 +0000
+
 kactivities (4:4.12.3-0ubuntu1) trusty; urgency=medium
 
   * New upstream bugfix release
