--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.12.95-0ubuntu1) UNRELEASED; urgency=medium
+kactivities (4:4.12.95-0ubuntu1) trusty; urgency=medium
 
   * New upstream beta release
 
- -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 20 Mar 2014 19:56:39 +0100
+ -- Rohan Garg <rohangarg@kubuntu.org>  Sun, 23 Mar 2014 11:55:47 +0100
 
 kactivities (4:4.12.90-0ubuntu1) trusty; urgency=medium
 
