--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities-kf5 (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (4.98.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Jonathan Riddell ]
   * New upstream alpha release
@@ -8,7 +8,10 @@ kactivities-kf5 (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
   * Fix install file 
   * Patch symbols 
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Mar 2014 12:13:34 +0000
+  [ Jonathan Riddell ]
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 29 Mar 2014 10:22:19 +0000
 
 kactivities-kf5 (4.96.0-0ubuntu1) trusty; urgency=medium
 
