--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.12.97-0ubuntu1) UNRELEASED; urgency=medium
+kactivities (4:4.12.97-0ubuntu1) trusty; urgency=medium
 
   * New upstream release candidate
 
- -- Philip Muškovac <yofel@kubuntu.org>  Fri, 28 Mar 2014 01:26:14 +0100
+ -- Philip Muškovac <yofel@kubuntu.org>  Tue, 01 Apr 2014 18:15:38 +0200
 
 kactivities (4:4.12.95-0ubuntu1) trusty; urgency=medium
 
