--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.12.4-1) UNRELEASED; urgency=medium
+kactivities (4:4.12.4-1~) UNRELEASED; urgency=medium
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 31 Mar 2014 22:48:47 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Apr 2014 21:48:22 +0200
 
 kactivities (4:4.12.3-1) experimental; urgency=medium
 
