--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities (4:4.13.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 17 May 2014 14:14:40 +0200
+
 kactivities (4:4.12.4-1) unstable; urgency=medium
 
   * New upstream release.
