--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.13.1-1~) UNRELEASED; urgency=medium
+kactivities (4:4.13.1-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 23 May 2014 13:06:39 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 26 May 2014 11:15:58 +0200
 
 kactivities (4:4.12.4-1) unstable; urgency=medium
 
