--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities-kf5 (4.99.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (4.99.0-0ubuntu1) trusty; urgency=medium
 
   * New upstream beta release
 
