--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ kactivities-kf5 (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * Bump depends versions
 
+  [ José Manuel Santamaría Lema ]
+  * Add kf5-kio-dev build depend.
+
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:33:09 +0100
 
 kactivities-kf5 (4.99.0-0ubuntu1) trusty; urgency=medium
