--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ kactivities-kf5 (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
   * Wildcard qml plugin installation in kactvities.install
   * Add localization files to kactivities.install. The library has none at
     the time of writing.
+  * Remove useless Pre-Depends fields used for multiarch compat in
+    releases older than trusty
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:33:09 +0100
 
