--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ kactivities-kf5 (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
     the time of writing.
   * Remove useless Pre-Depends fields used for multiarch compat in
     releases older than trusty
+  * Remove incorrect Section fields
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:33:09 +0100
 
