--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ kactivities-kf5 (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
   * Remove useless Pre-Depends fields used for multiarch compat in
     releases older than trusty
   * Remove incorrect Section fields
+  * Remove crap not-installed that really shouldn't exist to begin with and
+    only contained one file for which it is not exactly clear why we would
+    mark it not-installed...
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:33:09 +0100
 
