--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities (4:4.13.2-0ubuntu1) UNRELEASED; urgency=medium
+kactivities (4:4.13.2-0ubuntu1) utopic; urgency=medium
 
   [ Rohan Garg ]
   * Merge with debian, no remaining changes
