--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Initial stable upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:07:33 +0200
+
 kactivities-kf5 (4.100.0-0ubuntu1) utopic; urgency=medium
 
   [ Jonathan Riddell ]
