--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 kactivities-kf5 (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * Initial stable upstream release
+
+  [ Scarlett Clark ]
+  * Update watch file to stable
+  * Update depends to stable versions
+  * Add VCS
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:07:33 +0200
 
