--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 kactivities-kf5 (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * Update extra-cmake-modules depend version 
+
+  [ José Manuel Santamaría Lema ]
+  * Update libraries *.install paths so a soname bump doesn't go
+    unnoticed.
 
  -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Fri, 18 Jul 2014 07:24:35 -0700
 
