--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities (4:4.13.3-1) UNRELEASED; urgency=medium
+kactivities (4:4.13.3-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Jul 2014 13:33:43 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 31 Jul 2014 15:42:46 +0200
 
 kactivities (4:4.13.2-0ubuntu1) utopic; urgency=medium
 
