--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities-kf5 (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
+kactivities-kf5 (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Scarlett Clark ]
   * Update extra-cmake-modules depend version 
@@ -7,7 +7,10 @@ kactivities-kf5 (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
   * Update libraries *.install paths so a soname bump doesn't go
     unnoticed.
 
- -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Fri, 18 Jul 2014 07:24:35 -0700
+  [ Scarlett Clark ]
+  * New upstream release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 18:37:28 -0700
 
 kactivities-kf5 (5.0.0-0ubuntu1) utopic; urgency=medium
 
