--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities-kf5 (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.1.0-0ubuntu1) utopic; urgency=medium
 
   [ Scarlett Clark ]
   * Update extra-cmake-modules depend version 
@@ -10,7 +10,7 @@ kactivities-kf5 (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * New upstream release
 
- -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 18:37:28 -0700
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Tue, 05 Aug 2014 17:32:20 +0200
 
 kactivities-kf5 (5.0.0-0ubuntu1) utopic; urgency=medium
 
