--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
 kactivities-kf5 (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * New upstream release
+
+  [ Scarlett Clark ]
+  * Split out qml to its own package. 
+  * Added missing dependencies.
+  * Added missing files to install file. 
+  * Batchpatch symbols - removed 3 MISSING 
+     - std::_Sp_counted_base<(__gnu_cxx::_Lock_policy)2>::~_Sp_counted_base()
+
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 11 Sep 2014 20:18:05 +0000
 
