--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities-kf5 (5.3.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.3.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 06 Oct 2014 11:25:22 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 07 Oct 2014 11:14:27 +0100
 
 kactivities-kf5 (5.2.0-0ubuntu1) utopic; urgency=medium
 
