--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities-kf5 (5.4.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.4.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Nov 2014 18:26:58 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Nov 2014 15:04:58 +0100
 
 kactivities-kf5 (5.3.0-0ubuntu1) utopic; urgency=medium
 
