--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.5.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 11 Dec 2014 13:36:49 -0800
+
 kactivities-kf5 (5.4.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
