--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities-kf5 (5.5.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.5.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 11 Dec 2014 13:36:49 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 15 Dec 2014 11:06:13 +0100
 
 kactivities-kf5 (5.4.0-0ubuntu1) vivid; urgency=medium
 
