--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.6.0-1~) UNRELEASED; urgency=medium
+
+  * Prepare initial Debian release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jan 2015 15:23:45 +0100
+
 kactivities-kf5 (5.6.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
