--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ kactivities-kf5 (5.6.0-1~) UNRELEASED; urgency=medium
     follow cmake.
   * Bump Standards-Version to 3.9.6, no changes needed.
   * Update copyright information.
+  * Update install files.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jan 2015 15:23:45 +0100
 
