--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ kactivities-kf5 (5.6.0-1~) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.6, no changes needed.
   * Update copyright information.
   * Update install files.
+  * Update watch file.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jan 2015 15:23:45 +0100
 
