--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ kactivities-kf5 (5.6.0-1~) UNRELEASED; urgency=medium
   * Update copyright information.
   * Update install files.
   * Update watch file.
+  * Add basic autopkgtests support.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jan 2015 15:23:45 +0100
 
