NOCI  Release to vivid.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities-kf5 (5.7.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.7.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Harald Sitter <sitter@kde.org>  Mon, 09 Feb 2015 09:45:01 +0100
+ -- Harald Sitter <sitter@kde.org>  Tue, 10 Feb 2015 16:59:45 +0100
 
 kactivities-kf5 (5.6.0-0ubuntu1) vivid; urgency=medium
 
