Update symbols files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 kactivities-kf5 (5.11.0-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Update symbols files.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 07 Jul 2015 13:29:43 +0200
 
