--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities-kf5 (5.14.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.14.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Clive Johnston <clivejo@aol.com>  Mon, 14 Sep 2015 19:01:40 +0100
+ -- Clive Johnston <clivejo@aol.com>  Thu, 17 Sep 2015 13:09:13 +0100
 
 kactivities-kf5 (5.13.0-0ubuntu1) wily; urgency=medium
 
