--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kactivities-kf5 (5.15.0-1~) UNRELEASED; urgency=medium
+kactivities-kf5 (5.15.0-1) unstable; urgency=medium
 
   * New upstream release (5.15.0).
   * Update symbols files from buildds logs (5.14.0-1).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 05 Oct 2015 15:07:52 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 09 Oct 2015 19:16:54 +0200
 
 kactivities-kf5 (5.14.0-1) unstable; urgency=medium
 
