Add the new settings files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kactivities-kf5 (5.16.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.16.0).
+  * Add the new settings files.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Nov 2015 11:49:28 +0100
 
